--- a/curriculum-vitae/index.html
+++ b/curriculum-vitae/index.html
@@ -24,7 +24,7 @@
     </header>
     <main class="cv">
       <p>
-        I am an experienced Ruby developer and have lead several development efforts.
+        I am an experienced Ruby developer and have taken the lead in several development efforts.
         I have also delivered products in JavaScript and Elixir.
       </p>
       <p>
@@ -32,14 +32,14 @@
         Several articles on the topic are available on my blog.
       </p>
       <p>
-        My personal projects have included, creating a webapp to look through the world, a TCP server written in Elixir and an alternative tube map for London.
+        My personal projects have included: creating a webapp to look through the world, a TCP server written in Elixir and an alternative tube map for London.
       </p>
       <h1>Skills</h1>
       <hr>
       <h2>Ruby</h2>
       <p>
         <b>Testing:</b> Experience with MiniTest and RSpec, as well as Cucumber to build a cross language test suite.
-        Nurturing robust test suits has allowed me to have non-technical clients actively contributing to development.
+        Nurturing robust test suites has allowed me to have non-technical clients actively contributing to development.
       </p>
       <p>
         <b>Frameworks:</b> Worked on projects with and without Rails.
@@ -49,20 +49,20 @@
       <h2>JavaScript</h2>
       <p>
         <b>Frameworks:</b> Most recently built systems that made use of Vue.js, Redux.js and Ampersand.js.
-        Thorough understanding of JavaScript's protoype model, even finding it elegant,.
+        Thorough understanding of JavaScript's prototype model.
         This allows me to work without a reliance on particular frameworks.
       </p>
       <p>
         <b>Testing:</b> Used Jasmine to test frontend code.
-        Employ a pragmatic approach so that the cost of maintainence does not start to outweigh the benefits of testing.
+        Employ a pragmatic approach so that the cost of maintenance does not start to outweigh the benefits of testing.
       </p>
       <h2>Elixir</h2>
       <p>
         <b>Language:</b> Currently my passion, I find immutable data and the functional paradigm a natural way to express problems.
-        The concurrency model suggests a world of possibilites that I have not seen in other Languages.
+        The concurrency model suggests a world of possibilities that I have not seen in other languages.
       </p>
       <p>
-        <b>Web:</b> The job I had in Elixir was a translation service between different websocket API's. It was a project which would not have benifitted from Phoenix. The Phoenix web framework is something I would like to investigate further.
+        <b>Web:</b> The job I had in Elixir was a translation service between different websocket API's. It was a project which would not have benefited from Phoenix. The Phoenix web framework is something I would like to investigate further.
       </p>
       <h1>Open Source and Community</h1>
       <hr>
@@ -84,7 +84,7 @@
         </li>
       </ul>
       <p>
-        I enjoy blogging and speaking to share new techniques and practises. Check out my <a href="/talks">talks</a> and previous <a href="insights.workshop14.io">blog</a>.
+        I enjoy blogging and speaking at meet-ups and conferences to share new techniques and ideas. Check out my <a href="/talks">talks</a> and previous <a href="insights.workshop14.io">blog</a>.
       </p>
       <h1>Timeline</h1>
       <hr>
@@ -92,7 +92,7 @@
       <h3>Senior Software Developer</h3>
       <h4>Feb 2016 - Oct 2016</h4>
       <p>
-        As one of two intitial developers hired at Goodlord I was tasked with bringing an existing prototype application in house. Through the rebuild process I moved to being primarily responsible for the frontend code, a sophisticated single page web app. I had to coordinate discussions between the designer, buisness demands and backend team; as well as coding on a daily basis.
+        As one of two initial developers hired at Goodlord I was tasked with bringing an existing prototype application in house. Through the rebuild process I moved to being primarily responsible for the frontend code, a sophisticated single page web app. I had to coordinate discussions between the designer, business demands and backend team; as well as coding on a daily basis.
       </p>
       <h2>Workshop 14 Limited</h2>
       <h3>Lead Software Developer</h3>
@@ -104,7 +104,7 @@
       <h3>Maker</h3>
       <h4>Jan 2014 - Mar 2014</h4>
       <p>
-        Having a solid background in programming, Python from my PhD and previous work experience, I enrolled as a catalyst to change careers. The most valuable lesson I took from this period where around tools such as git and best practises such as Test Driven Development(TDD).
+        Having a solid background in programming, Python from my PhD and previous work experience, I enrolled as a catalyst to change careers. The most valuable lessons I took from this period were around tools such as git and best practices such as Test Driven Development(TDD).
       </p>
       <h2>Self Employed</h2>
       <h3>Personal Tutor</h3>
@@ -122,7 +122,7 @@
       <h3>Summer Placement</h3>
       <h4>May 2011 - Aug 2011</h4>
       <p>
-        Designed and implemented a new LabView program for high speed monitoring of superconducting magnets   during the energising process
+        Designed and implemented a new LabView program for high speed monitoring of superconducting magnets during the energising process
       </p>
       <h2>University of Oxford</h2>
       <h3>MPhys, Physics</h3>
