--- a/up-next.html
+++ b/up-next.html
@@ -46,6 +46,7 @@ fn max([], x) ->
       </pre>
       <h2>Projects</h2>
       <ul>
+        <li>App that follows you on twitter so makes a reading list from your likes.</li>
         <li>3d wack-a-mole</li>
         <li>decimal D.O.B</li>
         <li>local noon webpage</li>
