add ching to my timeline

--- a/curriculum-vitae/index.html
+++ b/curriculum-vitae/index.html
@@ -88,6 +88,13 @@
       </p>
       <h1>Timeline</h1>
       <hr>
+      <h2>Ching</h2>
+      <h3>Senior Software Developer</h3>
+      <h4>Jan 2017 - Present</h4>
+      <p>
+        As part of a small team I am working on the development of a modern secure network for payments and transfers.
+        I am writing backend Elixir code and we are exploring how an Event Driven Architecture can build a robust distributed system.
+      </p>
       <h2>Goodlord</h2>
       <h3>Senior Software Developer</h3>
       <h4>Feb 2016 - Oct 2016</h4>
