talk proposal around macros

--- a/talks/index.html
+++ b/talks/index.html
@@ -95,6 +95,24 @@
         It may also be possible to present this or similar topics as a more technical introduction to why to use BEAM for other communities.
       </p>
     </article>
+    <article class="">
+      <h1>Designing a DSL in Elixir</h1>
+      <h1>Elixir Macros: The power and the responsibility</h1>
+      <p class="abstract">
+        What macros can do for you and what you can do for everyone else
+      </p>
+      <p>
+        Elixir's Macro system is incredibly useful and incredibly powerful.
+        It offers much that is not possible with meta programming constructs in other languages. So much so that the first rule of macros is 'don't use macros'.
+      </p>
+      <p>
+        I have published several libraries using macros to build DSLs. From this experience I will provide an intro to macros. Level up to a show a few best practises for working in the ast. Finally, discuss some design principles to get the most value from your macros
+      </p>
+      <hr>
+      <p class="footnote">
+        Personal macro experience with OK, await and routing DSL
+      </p>
+    </article>
     <article>
       <h1>Object Oriented Programming, one more time.</h1>
       <p class="abstract">
