--- a/talks/building-ace/index.html
+++ b/talks/building-ace/index.html
@@ -129,7 +129,7 @@ class: middle
 0. Elixir what?
 1. Just starting out.
 2. Happy with the syntax and immutable data.
-3. Know all about of spawing and linking processes
+3. Know all about of spawning and linking processes
 
 ---
 
@@ -139,7 +139,7 @@ class: middle
 1. Just starting out.
 2. Happy with the syntax and immutable data.
 2.5. Know OTP takes care of 3 for me.
-3. Know all about of spawing and linking processes
+3. Know all about of spawning and linking processes
 
 ---
 
