--- a/talks/2017-05-04/introducing-tokumei/slides.html
+++ b/talks/2017-05-04/introducing-tokumei/slides.html
@@ -16,21 +16,21 @@
       }
       h1 .main {
         font-size: 200%;
-        color: orange;
+        color: #01a38a;
       }
       .remark-code, .remark-inline-code {
         font-family: 'Ubuntu Mono';
         font-size: 24px;
       }
       .alert {
-        color: orange;
+        color: #01a38a;
         font-style: italic;
       }
       em {
         color: #999;
       }
       a {
-        color: orange;
+        color: #01a38a;
       }
       blockquote {
         background-color: #EEE;
@@ -38,7 +38,7 @@
         font-size: 200%;
       }
       strong {
-        color: orange;
+        color: #01a38a;
       }
     </style>
   </head>
@@ -80,7 +80,7 @@ For this reason it doesn't use plug.
 
 ---
 
-# More than MVC
+# More than **MVC**
 
 - SQL
 - NoSQL
@@ -240,7 +240,8 @@ end
 
 class: middle
 
-## [hexdocs.pm/tokumei](https://hexdocs.pm/tokumei)
+# [hexdocs.pm/tokumei](https://hexdocs.pm/tokumei)
+## *@internets -* CrowdHailer
 
 
     </textarea>
