link to previous talk on webservers

--- a/talks/2017-04-26/web-without-the-framework/index.html
+++ b/talks/2017-04-26/web-without-the-framework/index.html
@@ -25,8 +25,11 @@
       <p>
         Live coding session to build a chat appliction using Elixir.
         This demonstration makes use of Elixir core utilities and Raxx.
-        It aims to show how capababile Elixir is for web development without the additional complexity of a framework
-        Raxx being a Webinterface layer designed to promote simplicity and functional purity.
+        It aims to show how capababile Elixir is for web development without the additional complexity of a framework.
+      </p>
+      <p>
+        Raxx is a Webinterface layer designed to promote simplicity and functional purity.
+        For more details about building a webserver, see my <a href="/talks/2017-04-29/building-a-webserver-in-elixir">previous talk</a>.
       </p>
       <p>
         I gave this talk for the Elixir London meetup group.
